trying to fix img not centered mobile

--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ div.item{
 .section-title { margin-bottom: 60px; }
 
 .image {
-    -webkit-filter: brightness(100%);
+  -webkit-filter: brightness(100%);
 	-moz-filter: brightness(100%);
 	-o-filter: brightness(100%);
 	-ms-filter: brightness(100%);
@@ -286,12 +286,13 @@ div.item{
 }
 
 .image:hover{
-    -webkit-filter: brightness(70%);
+  -webkit-filter: brightness(70%);
 	-moz-filter: brightness(70%);
 	-o-filter: brightness(70%);
 	-ms-filter: brightness(70%);
 	filter: brightness(70%);
 }
+
 .dark {
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
@@ -300,6 +301,7 @@ div.item{
 .img {
     max-width: 100%;
     height:auto;
+    text-align: center;
 }
 
 /* for anime.js  */
